# shmem-pmap

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
benchmark/: benchmark.py
shmem_pmap/: __init__.py
test/: test_shmem_pmap.py
