[project]
name = "shmem-pmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luke Yang", email = "lukeybsn@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
