[project]
name = "shmem-pmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luke Yang", email = "lukeybsn@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "types-tqdm>=4.67.0.20250516",
    "viztracer>=1.0.4",
]

[tool.ruff]
line-length = 120
select = ["F", "I"]
